--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-Hellow World
-
-Links:
-<a href="https://ocw.mit.edu/courses/6-041sc-probabilistic-systems-analysis-and-applied-probability-fall-2013/">MITx - Probabilistic Systems Analysis and Applied Probability</a>
-<a href="url">link text</a>
+Links: </br>
+<a href="https://ocw.mit.edu/courses/6-041sc-probabilistic-systems-analysis-and-applied-probability-fall-2013/">MITx - Probabilistic Systems Analysis and Applied Probability</a></br>
+<a href="https://cs50.harvard.edu/python/2022/">Harvard CS50P - Python Programming</a></br>
