--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 Links: </br>
+<b></b>In work:</b>
 <a href="https://ocw.mit.edu/courses/6-041sc-probabilistic-systems-analysis-and-applied-probability-fall-2013/">MITx - Probabilistic Systems Analysis and Applied Probability</a></br>
+<a href="https://ocw.mit.edu/courses/18-01sc-single-variable-calculus-fall-2010/">MITx - 18.01 Single Variable Calculus</a></br>
+
+<b>Completed:</b>
 <a href="https://cs50.harvard.edu/python/2022/">Harvard CS50P - Python Programming</a></br>
