--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 Links: </br>
 <b>In work:</b> </br>
-<a href="https://ocw.mit.edu/courses/6-041sc-probabilistic-systems-analysis-and-applied-probability-fall-2013/">MIT - 6.041 Probabilistic Systems Analysis and Applied Probability</a></br>
-<a href="https://ocw.mit.edu/courses/18-01sc-single-variable-calculus-fall-2010/">MIT - 18.01 Single Variable Calculus</a></br>
-<a href="https://ocw.mit.edu/courses/18-02sc-multivariable-calculus-fall-2010/">MIT - 18.02 Multivariable Calculus</a></br>
-<a href="https://ocw.mit.edu/courses/18-06sc-linear-algebra-fall-2011/">MIT - 18.06 Linear Algebra</a></br>
-<a href="https://www.learnlatex.org/en/">LearnLATEX.org</a></br>
-<a href="https://cs50.harvard.edu/ai/2024/">Harvard - CS50AI Introduction to Artifical Intelligence with Python</a></br>
-<a href="https://cs50.harvard.edu/x/2025/">Harvard - CS50X Introduction to Computer Science</a></br>
+<a href="https://ocw.mit.edu/courses/6-041sc-probabilistic-systems-analysis-and-applied-probability-fall-2013/" target="_blank">MIT - 6.041 Probabilistic Systems Analysis and Applied Probability</a></br>
+<a href="https://ocw.mit.edu/courses/18-01sc-single-variable-calculus-fall-2010/" target="_blank">MIT - 18.01 Single Variable Calculus</a></br>
+<a href="https://ocw.mit.edu/courses/18-02sc-multivariable-calculus-fall-2010/" target="_blank">MIT - 18.02 Multivariable Calculus</a></br>
+<a href="https://ocw.mit.edu/courses/18-06sc-linear-algebra-fall-2011/" target="_blank">MIT - 18.06 Linear Algebra</a></br>
+<a href="https://www.learnlatex.org/en/" target="_blank">LearnLATEX.org</a></br>
+<a href="https://cs50.harvard.edu/ai/2024/" target="_blank">Harvard - CS50AI Introduction to Artifical Intelligence with Python</a></br>
+<a href="https://cs50.harvard.edu/x/2025/" target="_blank">Harvard - CS50X Introduction to Computer Science</a></br>
 
 <b>Completed:</b> </br>
-<a href="https://cs50.harvard.edu/python/2022/">Harvard - CS50P Python Programming</a></br>
+<a href="https://cs50.harvard.edu/python/2022/ target="_blank"">Harvard - CS50P Python Programming</a></br>
