--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ Links: </br>
 <a href="https://cs50.harvard.edu/x/2025/" target="_blank">Harvard - CS50X Introduction to Computer Science</a></br>
 
 <b>Completed:</b> </br>
-<a href="https://cs50.harvard.edu/python/2022/ target="_blank"">Harvard - CS50P Python Programming</a></br>
+<a href="https://cs50.harvard.edu/python/2022/" target="_blank">Harvard - CS50P Python Programming</a></br>
