--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Links: </br>
 <a href="https://www.learnlatex.org/en/" target="_blank">LearnLATEX.org</a></br>
 <a href="https://cs50.harvard.edu/ai/2024/" target="_blank">Harvard - CS50AI Introduction to Artifical Intelligence with Python</a></br>
 <a href="https://cs50.harvard.edu/x/2025/" target="_blank">Harvard - CS50X Introduction to Computer Science</a></br>
+<a href="https://learning.quantum.ibm.com/" target="_blank">IBM Quantum Learning</a></br>
 
 <b>Completed:</b> </br>
 <a href="https://cs50.harvard.edu/python/2022/" target="_blank">Harvard - CS50P Python Programming</a></br>
