--- a/index.html
+++ b/index.html
@@ -11,3 +11,12 @@ Links: </br>
 
 <b>Completed:</b> </br>
 <a href="https://cs50.harvard.edu/python/2022/" target="_blank">Harvard - CS50P Python Programming</a></br>
+
+<b>Resources:</b> </br>
+https://edstem.org/us/dashboard
+<a href="https://edstem.org/us/dashboard" target="_blank">ED Dashboard</a></br>
+<a href="https://arcprize.org/research" target="_blank">ARC AGI</a></br>
+<a href="https://www.reddit.com/r/OMSCS/comments/1hsbc76/all_courses_ranked_by_difficulty_2025_springfall/" target="_blank">Reddit OMSCS 2025 Course Rankings</a></br>
+<a href="https://omscs.rocks/" target="_blank">OMSCS Rocks</a></br>
+<a href="https://www.omscentral.com/" target="_blank">OMSCS Central</a></br>
+<a href="https://www.omshub.org/" target="_blank">OMSCS Hub</a></br>
