--- a/index.html
+++ b/index.html
@@ -19,3 +19,6 @@ Links: </br>
 <a href="https://omscs.rocks/" target="_blank">OMSCS Rocks</a></br>
 <a href="https://www.omscentral.com/" target="_blank">OMSCS Central</a></br>
 <a href="https://www.omshub.org/" target="_blank">OMSCS Hub</a></br>
+
+<b>Training:</b> </br>
+<a href="https://rol.redhat.com/rol/app/" target="_blank">RHEL Learning Sub</a></br>
