--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Links: </br>
 <a href="https://www.omscentral.com/" target="_blank">OMSCS Central</a></br>
 <a href="https://www.omshub.org/" target="_blank">OMSCS Hub</a></br>
 <a href="https://nsa-codebreaker.org/resources" target="_blank">NSA Codebreakers</a></br>
-
+<a href="https://buzzdb-docs.readthedocs.io/" target="_blank">Buzz DB</a></br>
 
 <b>Training:</b> </br>
 <a href="https://rol.redhat.com/rol/app/" target="_blank">RHEL Learning Sub</a></br>
