--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ Links: </br>
 <a href="https://www.omshub.org/" target="_blank">OMSCS Hub</a></br>
 <a href="https://nsa-codebreaker.org/resources" target="_blank">NSA Codebreakers</a></br>
 <a href="https://buzzdb-docs.readthedocs.io/" target="_blank">Buzz DB</a></br>
+<a href="https://probml.github.io/pml-book/" target="_blank">"Probabilistic Machine Learning" - a book series by Kevin Murphy</a></br>
+
 
 <b>Training:</b> </br>
 <a href="https://rol.redhat.com/rol/app/" target="_blank">RHEL Learning Sub</a></br>
